Deployment/objects/Person__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Father__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Father</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Child (F)</relationshipLabel>
        <relationshipName>FChild</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marriage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marriage</label>
        <referenceTo>Marriage__c</referenceTo>
        <relationshipLabel>People</relationshipLabel>
        <relationshipName>People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mother__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mother</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Child (M)</relationshipLabel>
        <relationshipName>MChild</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Person</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>People</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>